# qt_rofls

./: .gitignore  CMakeLists.txt
first_task/: CMakeLists.txt
first_task/src/: CMakeLists.txt  main.cpp  mainWindow.ui
second_task/: CMakeLists.txt
second_task/src/: CMakeLists.txt  main.cpp
second_task/src/mainWindow/: mainWindow.cpp  mainWindow.hpp
second_task/src/mouseTracker/: mouseTracker.cpp  mouseTracker.hpp  mouseTracker.ui
second_task/src/multimedia/: multimedia.cpp  multimedia.hpp  multimedia.ui  renderTest.cpp  renderTest.hpp
second_task/src/resources/: resource.qrc
src/: mainWindow.cpp  mainWindow.hpp
